# OS_EX3

./: CMakeLists.txt  MapReduceClient.cpp  MapReduceClient.h  MapReduceFramework.cpp  MapReduceFramework.h  MapReduceSearch.cpp  MapReduceSearch.h  README.md  ReduceFrameworkException.cpp  ReduceFrameworkException.h  Search.cpp  TA3_Signals_Threads.pptx  log.cpp  log.h  main.cpp
